--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -1,4 +1,3 @@
-
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
@@ -6,13 +5,48 @@
     <title>Title</title>
 </head>
 <body>
-    <div th:align="center" th:if="${person} != null" style="color: greenyellow">
-        <span th:text="${person.getId()}"></span> ==>
-        <span th:text="${person.getName()}"></span> ==>
-        <span th:text="${person.getAge()}"></span>
+    <div th:align="center" style="color: #333333;border-top:1px dashed #000000;border-left:1px dashed #000000;width: 300px;">
+        <div style="display:flex;flex-direction: row;width: 100%;">
+            <label style="width: 50%;border-right:1px dashed #000000;border-bottom:1px dashed #000000;">City</label>
+            <span style="width: 50%;border-right:1px dashed #000000;border-bottom:1px dashed #000000;">
+                <select name="city" id="city">
+                    <option value="">please choose a city</option>
+<!--                    <option th:selected="${weather.getCityName()=='Melbourne'}">Melbourne</option>-->
+<!--                    <option th:selected="${weather.getCityName()=='Sydney'}">Sydney</option>-->
+<!--                    <option th:selected="${weather.getCityName()=='Wollongong'}">Wollongong</option>-->
+                    <option th:onchange="'javascript:searchWeather();'"
+                            th:each="city : ${cities}"
+                            th:value="${city}" th:text="${city}">
+                    </option>
+                </select>
+            </span>
+        </div>
+        <div style="display:flex;flex-direction: row;width: 100%;">
+            <label style="width: 50%;border-right:1px dashed #000000;border-bottom:1px dashed #000000;">UpdateTime</label>
+            <span style="width: 50%;border-right:1px dashed #000000;border-bottom:1px dashed #000000;" th:text="${weather.getDtTime()}"></span>
+        </div>
+        <div style="display:flex;flex-direction: row;width: 100%;">
+            <label style="width: 50%;border-right:1px dashed #000000;border-bottom:1px dashed #000000;">Weather</label>
+            <span style="width: 50%;border-right:1px dashed #000000;border-bottom:1px dashed #000000;" th:text="${weather.getWeather()}"></span>
+        </div>
+        <div style="display:flex;flex-direction: row;width: 100%;">
+            <label style="width: 50%;border-right:1px dashed #000000;border-bottom:1px dashed #000000;">Temperature</label>
+            <span style="width: 50%;border-right:1px dashed #000000;border-bottom:1px dashed #000000;" th:text="${weather.getTemperature()}"></span>
+        </div>
+        <div style="display:flex;flex-direction: row;width: 100%;">
+            <label style="width: 50%;border-right:1px dashed #000000;border-bottom:1px dashed #000000;">Wind</label>
+            <span style="width: 50%;border-right:1px dashed #000000;border-bottom:1px dashed #000000;" th:text="${weather.getWind()}"></span>
+        </div>
     </div>
 </body>
 </html>
-————————————————
-版权声明：本文为CSDN博主「o_瓜田李下_o」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
-原文链接：https://blog.csdn.net/weixin_43931625/article/details/107832908
+
+<script>
+    function searchWeather(){
+        var options = $("#city option:selected");
+        debugger
+    }
+
+
+
+</script>
